<?xml version="1.0"?>
<package>
  <name>chat_server</name>
  <version>0.0.1</version>
  <description>The chat_server package</description>

  <maintainer email="hampusdunstrom@gmail.com">hampusdunstrom@gmail.com</maintainer>

  <license>GNU LESSER GENERAL PUBLIC LICENSE 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>